--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link" href="">Contact</a>
+                <a class="nav-link" href="#footer">Contact</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="">Pricing</a>
+                <a class="nav-link" href="#pricing">Pricing</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="">Download</a>
+                <a class="nav-link" href="#cta">Download</a>
               </li>
             </ul>
           </div>
@@ -49,7 +49,7 @@
           <button type="button" class="btn btn-dark btn-lg DownloadButton"><i class="fa-brands fa-apple"></i> Download</button>
           <button type="button" class="btn btn-outline-light btn-lg DownloadButton "><i class="fa-brands fa-google-play"></i> Download</button>
         </div>
-        <div class="col-lg-6">
+        <div class="imageTItle col-lg-6">
           <img class="Title-image" src="images/iphone6.png" alt="iphone-mockup">
         </div>
       </div>
@@ -193,9 +193,10 @@
 
   <section id="cta">
 
-    <h3>Find the True Love of Your Dog's Life Today.</h3>
-    <button type="button">Download</button>
-    <button type="button">Download</button>
+    <h3 class="h3-l">Find the True Love of Your Dog's Life Today.</h3>
+    <button type="button" class="btn btn-dark btn-lg DownloadButton"><i class="fa-brands fa-apple"></i> Download</button>
+    <button type="button" class="btn btn-outline-light btn-lg DownloadButton "><i class="fa-brands fa-google-play"></i> Download</button>
+
 
   </section>
 
@@ -203,6 +204,10 @@
   <!-- Footer -->
 
   <footer id="footer">
+    <i class="social-icon  fa-brands fa-facebook"></i>
+    <i class="social-icon  fa-brands fa-twitter"></i>
+    <i class="social-icon fa-brands fa-instagram"></i>
+    <i class="social-icon fa-solid fa-envelope"></i>
 
     <p>© Copyright TinDog</p>
 
